Make RecipeCrafter not so scary. I hope.